force-app/main/default/objects/Contact/fields/ChexSystems_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ChexSystems_Identifier__c</fullName>
    <formula>Account.ChexSystems_Identifier__c</formula>
    <label>ChexSystems Identifier</label>
    <type>Text</type>
</CustomField>