force-app/main/default/objects/Contact/fields/ChexSystems_product__c.field-meta.xml
<CustomField>
    <fullName>ChexSystems_product__c</fullName>
    <label>ChexSystems Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>QualiFile</fullName>
                <default>true</default>
                <label>QualiFile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>