force-app/main/default/objects/Contact/fields/ChexSystems_Qualifile_Strategy__c.field-meta.xml
<CustomField>
    <fullName>ChexSystems_Qualifile_Strategy__c</fullName>
    <formula>TEXT(Account.ChexSystems_Qualifile_Strategy__c)</formula>
    <label>ChexSystems Qualifile Strategy</label>
    <type>Text</type>
</CustomField>