force-app/main/default/objects/Contact/fields/cmRent_or_Own_Current_Address__c.field-meta.xml
<CustomField>
    <fullName>cmRent_or_Own_Current_Address__c</fullName>
    <description>Used in Online App to collect information on whether the primary address entered is rented or owned. If indicated as a rental, this field renders the &quot;Rental Expense&quot; field in a Retail Loan Application.</description>
    <label>Rent or Own Current Address?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>