force-app/main/default/objects/Contact/fields/Equifax_Frozen_File_Code__c.field-meta.xml
<CustomField>
    <fullName>Equifax_Frozen_File_Code__c</fullName>
    <description>Frozen file code used for one-time Equifax credit thaw</description>
    <label>Equifax Frozen File Code</label>
    <length>4</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>