force-app/main/default/objects/Contact/fields/Passport_ID_Country_cm__c.field-meta.xml
<CustomField>
    <fullName>Passport_ID_Country_cm__c</fullName>
    <label>Passport ID Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>