force-app/main/default/objects/Contact/recordTypes/Individual_Contact_Master_TigerStrike.recordType-meta.xml
<RecordType>
    <fullName>Individual_Contact_Master_TigerStrike</fullName>
    <active>true</active>
    <description>Individual Contact RT for Master Tiger Strike Org</description>
    <label>Individual Contact ( Master TigerStrike)</label>
</RecordType>