force-app/main/default/objects/Contact/recordTypes/LLC_BI__Business_Contact.recordType-meta.xml
<RecordType>
    <fullName>LLC_BI__Business_Contact</fullName>
    <active>true</active>
    <description>Select &quot;Business Contact&quot; if you&apos;re adding a contact that applies to a Business relationship.</description>
    <label>Business Contact</label>
</RecordType>