force-app/main/default/objects/Contact/validationRules/LLC_BI__Social_Security_Max_Length.validationRule-meta.xml
<ValidationRule>
    <fullName>LLC_BI__Social_Security_Max_Length</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( LLC_BI__SS__c ) &gt; 12</errorConditionFormula>
    <errorMessage>Social Security Number cannot exceed 12 characters</errorMessage>
</ValidationRule>