force-app/main/default/objects/Contact/validationRules/Social_Security_Max_Length_9.validationRule-meta.xml
<ValidationRule>
    <fullName>Social_Security_Max_Length_9</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$User.No_Workflow__c = false,

NOT(ISBLANK(LLC_BI__SS__c)),
OR(
LEN(LLC_BI__SS__c)!=9
,
NOT(REGEX(LLC_BI__SS__c , &quot;([0-9]{9})|([0-9]{3}-[0-9]{2}-[0-9]{4})|([0-9]{2}-[0-9]{7})&quot;))))</errorConditionFormula>
    <errorDisplayField>LLC_BI__SS__c</errorDisplayField>
    <errorMessage>Social Security Number cannot exceed 9 digits.</errorMessage>
</ValidationRule>